--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src-vite/main.tsx"></script>
+    <script type="module" src="./src-vite/main.tsx"></script>
   </body>
 </html>
 
